@@ -1,6 +1,6 @@
 Package: igraph
 Version: 0.4.3
-Date: May 28, 2007
+Date: Aug 7, 2007
 Title:  Routines for simple graphs, network analysis.
 Author: Gabor Csardi <csardi@rmki.kfki.hu>
 Maintainer: Gabor Csardi <csardi@rmki.kfki.hu>
@@ -8,6 +8,6 @@ Description: Routines for simple graphs and network analysis. igraph can
   handle large graphs very well and provides functions for generating random
   and regular graphs, graph visualization, centrality indices and much more.
 Depends: stats
-Suggests: stats4, rgl
+Suggests: stats4, rgl, tcltk
 License: GPL version 2 or later (June, 1991)
 URL: http://cneurocvs.rmki.kfki.hu/igraph
